# cuneicode

./: .clang-format  .git-blame-ignore-revs  .gitignore  .readthedocs.yml  .style.yapf  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  NOTICE  README.md  paper.bib  paper.md  ztd.cuneicode.pc.in
.github/workflows/: macosx.yml  push-pull_request.yml  ubuntu.yml  windows.yml
benchmarks/: CMakeLists.txt
benchmarks/barrier/: CMakeLists.txt
benchmarks/barrier/include/barrier/: api.h  barrier.h  convert.h  data.h  version.h
benchmarks/barrier/source/: convert.cpp  data.cpp
benchmarks/barrier_conversion/: CMakeLists.txt
benchmarks/barrier_conversion/include/barrier_conversion/: convert.h
benchmarks/barrier_conversion/source/: convert.cpp
benchmarks/function_form/: CMakeLists.txt
benchmarks/function_form/bench/: CMakeLists.txt
benchmarks/function_form/bench/source/: bench.cpp  main.cpp
benchmarks/function_form/source/: bench.cpp
benchmarks/include/ztd/cuneicode/benchmarks/: utf8_startup.hpp
benchmarks/speed/: CMakeLists.txt  graph_config.json
benchmarks/speed/include/: ctre_utf8_cxx17.hpp
benchmarks/speed/source/: boost.text.cpp  ctre.cpp  cuneicode.cpp  cuneicode_registry.cpp  encoding_c.cpp  iconv.cpp  icu.cpp  noop.cpp  simdutf.cpp  utf8cpp.cpp  windows.cpp
benchmarks/speed/utf16_to_utf8/: CMakeLists.txt
benchmarks/speed/utf16_to_utf8/source/: boost.text.cpp  cuneicode.cpp  cuneicode_registry.cpp  iconv.cpp  icu.cpp  main.cpp  simdutf.cpp  windows.cpp
benchmarks/tools/: CMakeLists.txt
benchmarks/tools/generate_graphs/: __main__.py  benchmarks_parser.py  default.py  sources_parser.py  visualize.py
cmake/: ztd.cuneicode-config.cmake.in
documentation/: CMakeLists.txt  Doxyfile.in
documentation/source/: api.rst  benchmarks.rst  bibliography.rst  conf.py  definitions.rst  design.rst  future.rst  genindex.rst  index.rst  known unicode encodings.rst  license.rst  quick.rst  start.rst
documentation/source/_static/: inline_removal.js
documentation/source/api/: constants.rst  conversion_info.rst  encodings.rst  generic typed conversions.rst  heap.rst  mcerr.rst  mcerror.rst  mcstate_t.rst  open_err.rst  open_error.rst  pivot_info.rst  registry conversion handles.rst  registry conversions.rst  registry.rst  registry_options.rst  registry_types.rst  typed conversions.rst
documentation/source/api/encodings/: ascii.rst  big5-hkscs.rst  big5_hkscs.rst  gb18030.rst  gbk.rst  multi_byte_encodings.rst  punycode.rst  shift-jis-x0208.rst  shift-jis.rst  single_byte_encodings.rst  (+1 more)
documentation/source/design/: bulk.rst  function.rst  indivisable.rst  indivisible.rst  naming.rst  registry.rst  single.rst  state.rst
examples/: .clang-format  CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/source/: error_handling.custom.utf32_to_utf8.c  error_handling.utf32_to_utf8.c  errors_shift_jis_to_utf8.c  functionality_from_base_functions.c  functionality_from_base_functions.cpp  registry_empty_shift_jis_to_utf8.c  registry_errors_shift_jis_to_utf8.c  registry_punycode_to_utf8.c  registry_punycode_to_utf8.cpp  registry_shift_jis_to_utf8.c  registry_shift_jis_to_utf8.cpp  registry_windows_code_page.c  utf32_to_utf8.c  utf32_to_utf8.cpp  windows_code_page.c
examples/cconv/: CMakeLists.txt
examples/cconv/data/: 0.input
examples/cconv/source/: def.cpp  handler.cpp  io.cpp  main.cpp  options.cpp  usage.cpp
examples/documentation/: CMakeLists.txt
examples/documentation/design/: CMakeLists.txt
examples/documentation/quick/: CMakeLists.txt
examples/extensions/: CMakeLists.txt
examples/extensions/source/: error_handling.utf32_to_utf8.stmt_exprs.c  special_functionality.stmt_exprs.c  utf32_to_utf8.stmt_exprs.c
examples/simdutf/: CMakeLists.txt
examples/simdutf/source/: main.cpp  simdutf_extension.cpp  stream_helpers.cpp
include/ztd/: cuneicode.h
include/ztd/cuneicode/: amiga_1251.h  ascii.h  atari_st.h  atascii.h  big5_hkscs.h  conv.h  detection.h  error_handler.h  error_handler_function.h  euc_cn.h  euc_jp.h  euc_kr.h  euc_kr_uhc.h  euc_tw.h  gb18030.h  gbk.h  heap.h  ibm866.h  ibm_1006_urdu.h  ibm_424_hebrew_bulletin.h  ibm_856_hebrew.h  ibm_866.h  ibm_866_cyrillic.h  inout_result.h  io.h  iso_2022_jp.h  iso_8859_1.h  iso_8859_10.h  iso_8859_13.h  iso_8859_14.h  iso_8859_15.h  iso_8859_16.h  iso_8859_1_1985.h  iso_8859_1_1998.h  iso_8859_2.h  iso_8859_3.h  iso_8859_4.h  iso_8859_5.h  iso_8859_6.h  iso_8859_7.h  (+64 more)
shared/: CMakeLists.txt
shared/simdutf/: CMakeLists.txt
shared/simdutf/source/: registry.cpp
shared/source/: stream_helpers.cpp
single/: CMakeLists.txt
source/ztd/cuneicode/: amiga_1251.cpp  ascii.cpp  atari_st.cpp  atascii.cpp  big5_hkscs.cpp  c16n.cpp  c16sn.cpp  c32n.cpp  c32n_mwcn_ibmeucjp.cpp  c32n_mwcn_ibmeuctw.cpp  c32sn.cpp  c8n.cpp  c8sn.cpp  conv.cpp  conv_invoke.cpp  detection.cpp  euc_cn.cpp  euc_jp.cpp  euc_kr.cpp  euc_kr_uhc.cpp  euc_tw.cpp  gb18030.cpp  gbk.cpp  heap.cpp  ibm866.cpp  ibm_1006_urdu.cpp  ibm_424_hebrew_bulletin.cpp  ibm_856_hebrew.cpp  ibm_866.cpp  ibm_866_cyrillic.cpp  io.cpp  iso_2022_jp.cpp  iso_8859_1.cpp  iso_8859_10.cpp  iso_8859_13.cpp  iso_8859_14.cpp  iso_8859_15.cpp  iso_8859_16.cpp  iso_8859_1_1985.cpp  iso_8859_1_1998.cpp  (+65 more)
tests/: CMakeLists.txt
tests/allocation/: CMakeLists.txt
tests/allocation/include/: version.h
tests/allocation/source/: c_alloc_override.c  cxx_alloc_override.cpp  main.c
tests/basic_run_time/: CMakeLists.txt
tests/basic_run_time/source/: main.cpp  punycode.cpp  registry.roundtrip.bulk.cpp  registry.roundtrip.cpp  roundtrip.bulk.cpp  roundtrip.cpp  unicode_range.hpp  windows_code_page.cpp
tests/big5_hkscs/data/: big5.txt
tests/compile_time/: CMakeLists.txt
tests/compile_time/source/: main.c  result_types.c
tests/gb2312/: gb2312.txt
tests/inclusion/: CMakeLists.txt
tests/inclusion/source/: main.c  main.cpp
tests/inclusion_as_c++/: CMakeLists.txt
tests/inclusion_as_c++/source/: main.cpp
tests/registry/: CMakeLists.txt
tests/registry/source/: default_registry_aliases.cpp  indirect_ascii.cpp  main.cpp
(+219 files in other folders)
